Fix overflow issue

--- a/style.css
+++ b/style.css
@@ -49,7 +49,6 @@ body {
     padding: 10px;
     font-weight: bold;
     color: rgb(132, 0, 255);
-    /* position: absolute; */
     top: 20px;
     margin-top: 10%;
 }
@@ -92,6 +91,7 @@ body {
     justify-content: space-between;
     gap: 10px;
     padding-top: 10px;
+    overflow: auto;
 }
 
 .imgBtn {
